// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-6114fe46-1 iGFWOO undefined "
  >
    button test
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-6114fe46-2 eGFcal"
  >
    button test
  </button>
</div>
`;
